--- a/0.Data_processing/data_processing.ipynb
+++ b/0.Data_processing/data_processing.ipynb
@@ -233,7 +233,7 @@
    "id": "69ceb48c",
    "metadata": {},
    "source": [
-    "**Matching annotators and imegery files**\n",
+    "**Matching annotators and imagery files**\n",
     "- Download 'CapeTown_ImageIDs.xlsx' files\n",
     "- Only 271 Aerial Images have annotations"
    ]
@@ -774,7 +774,7 @@
    "metadata": {},
    "source": [
     "**Loading CRS(Coordinate Reference System)**\n",
-    "- For CRS, We are using ESRI not, ESRP which is not compatible with Python. Thus, we need to import .tif file that contains the CRS we use (ESRI:)\n",
+    "- For CRS, we are using `ESRI` not, ESRP which is not compatible with Python. Thus, we need to import .tif file that contains the CRS we use (ESRI:)\n",
     "- ESRI:102562 (CapeTown Area)"
    ]
   },
@@ -900,13 +900,13 @@
    "metadata": {},
    "source": [
     "**Checking the number of annotations**\n",
-    "- Counting rows per files \n",
-    "- '2020' Layers should be deleted, that does not match CRS(ESRI : 102562)"
+    "- Counting rows of each shape files(.shp extension) \n",
+    "- The '2020' layers were deleted. They did not match the coordinate reference system (CRS: ESRI 102562). (Confirmed with Biz.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b9f58e29",
    "metadata": {},
    "outputs": [
@@ -989,8 +989,8 @@
    "metadata": {},
    "source": [
     "**Data Formatting & Cleaning**\n",
-    "- Delete the rows having any values in 'path' or 'layer' columns that is legacy data\n",
-    "- Create columns for edge datapoint of each aerial imagery \n",
+    "- Delete the rows containing any values in 'path' or 'layer' columns(legacy data)\n",
+    "- Add columns to record the vertices of each aerial imagery \n",
     "- 22519 rows × 17 columns"
    ]
   },
@@ -1394,9 +1394,9 @@
    "metadata": {},
    "source": [
     "**Bounding Box extraction** \n",
-    "- Using rasterio, read through each aerial imagery and extract edges information\n",
-    "- 'CapeTown_ImageIDs.xlsx' does not include all the reference imagery files name\n",
-    "- Therefore, read through all the imagery files instead"
+    "- Use `rasterio` to read each aerial imagery and extract boundary information\n",
+    "- The 'CapeTown_ImageIDs.xlsx' file does not include the name of all reference imagery files name\n",
+    "- Therefore, read all the imagery files directly instead"
    ]
   },
   {
@@ -1465,7 +1465,7 @@
    "metadata": {},
    "source": [
     "**Matching annotations with aerial imagery**\n",
-    "- Using cetroid_latitude & longitude to determine which image each annotations belongs to\n",
+    "- Use cetroid_latitude & longitude to determine which image each annotations belongs to\n",
     "- 22519 rows × 17 columns"
    ]
   },
@@ -1867,13 +1867,13 @@
    "metadata": {},
    "source": [
     "**Addational Data Cleaning (8steps) -> 19,735 unique annotations**\n",
-    "- Drops duplicates corresponding to 'geometry'\n",
-    "- Merges PV_Pool into PV_pool.\n",
-    "- Ensures binary values '1' or 'Nan' for PV related columns.\n",
-    "- Creates a 'PV_normal' column if all other PV related colums are NaN.\n",
-    "- Reorders columns for clarity\n",
-    "- Drops unnecessary columns (layer, path = '2020 layers').\n",
-    "- Reindexs 'id' for consistency.\n",
+    "- Drop duplicates corresponding to 'geometry'\n",
+    "- Merge PV_Pool into PV_pool.\n",
+    "- Ensure binary values '1' or 'Nan' for PV related columns.\n",
+    "- Create a 'PV_normal' column if all other PV related colums are NaN.\n",
+    "- Reorder columns for clarity\n",
+    "- Drop unnecessary columns (layer, path = '2020 layers').\n",
+    "- Reindex 'id' for consistency.\n",
     "\n",
     "\n",
     "- !!! Around 1.9K annotations are missing imagery files, 'CapeTown_ImageIDs.xlsx' does not cover all required imagey files. We found additional 23 imagery files that to match all annotations !!!\n",
@@ -2288,8 +2288,8 @@
    "source": [
     "**Save Dataframe as GPKG**\n",
     "- Shapefiles have a limitation: field (column) names must be fewer than 10 characters. Therefore, GPKG is preferrered here.\n",
-    "- !!! ESRI 102562 is equal to EPSG:4326 (WGS84) https://spatialreference.org/ref/esri/102562/wkt.html !!!\n",
-    "- in Q-GIS\n"
+    "- Note: ESRI 102562 is equal to EPSG:4326 (WGS84) https://spatialreference.org/ref/esri/102562/wkt.html.\n",
+    "- The full WKT format of ESRI 102562 is privided in the following code block."
    ]
   },
   {
