--- a/2.Modeling/2.3.YOLO+U-Net/Evaluation/2.evalution_YOLO+U-Net.ipynb
+++ b/2.Modeling/2.3.YOLO+U-Net/Evaluation/2.evalution_YOLO+U-Net.ipynb
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating:  12%|█▏        | 60/483 [00:00<00:01, 305.85it/s]"
+      "Evaluating:   7%|▋         | 34/483 [00:01<00:10, 43.15it/s]"
      ]
     },
     {
@@ -29,10 +29,36 @@
      "output_type": "stream",
      "text": [
       "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_14_13.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_16_18.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_16_18.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating:  11%|█         | 53/483 [00:01<00:06, 64.04it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_18_21.png\n",
       "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_18_22.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_19_13.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_19_13.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating:  15%|█▌        | 73/483 [00:01<00:05, 76.72it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_20_5.png\n",
       "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_22_1.png\n"
      ]
@@ -41,18 +67,57 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating:  41%|████      | 198/483 [00:00<00:00, 426.71it/s]"
+      "Evaluating:  24%|██▎       | 114/483 [00:02<00:05, 64.86it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_27_28.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_27_28.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating:  30%|██▉       | 143/483 [00:02<00:04, 82.67it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_30_1.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_30_24.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_30_24.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating:  33%|███▎      | 161/483 [00:03<00:04, 79.47it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_32_22.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_33_7.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_33_7.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating:  39%|███▊      | 187/483 [00:03<00:03, 76.79it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_35_26.png\n",
       "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_36_17.png\n"
      ]
@@ -61,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating:  59%|█████▉    | 285/483 [00:00<00:00, 414.44it/s]"
+      "Evaluating:  48%|████▊     | 231/483 [00:04<00:03, 77.41it/s]"
      ]
     },
     {
@@ -69,43 +134,121 @@
      "output_type": "stream",
      "text": [
       "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_3_29.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_4_24.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_11_25.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_12_3.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_13_14.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_13_25.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_13_30.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_14_30.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_15_10.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_15_16.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_20_13.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_26_11.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_26_5.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_27_5.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_27_9.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_29_7.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_30_5.png\n"
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W24A_17_4_24.png\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating:  79%|███████▉  | 383/483 [00:00<00:00, 450.81it/s]"
+      "Evaluating:  55%|█████▌    | 268/483 [00:04<00:02, 73.29it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_37_10.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_11_25.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_12_3.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating:  59%|█████▉    | 285/483 [00:04<00:02, 70.13it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_13_14.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_13_25.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_13_30.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_14_30.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_15_10.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_15_16.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating:  64%|██████▍   | 309/483 [00:05<00:01, 92.71it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_20_13.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_26_11.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_26_5.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_27_5.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_27_9.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_29_7.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_30_5.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_37_10.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating:  71%|███████   | 341/483 [00:05<00:01, 77.31it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_3_15.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_6_34.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_7_18.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_6_34.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating:  75%|███████▍  | 360/483 [00:05<00:01, 78.85it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W25C_16_7_18.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating:  81%|████████▏ | 393/483 [00:06<00:01, 67.70it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[Warning] Prediction missing: m_2023_RGB_8cm_W57B_8_14_13.png\n",
       "[Warning] Prediction missing: m_2023_RGB_8cm_W57B_8_18_10.png\n",
       "[Warning] Prediction missing: m_2023_RGB_8cm_W57B_8_19_11.png\n",
-      "[Warning] Prediction missing: m_2023_RGB_8cm_W57B_8_1_27.png\n",
+      "[Warning] Prediction missing: m_2023_RGB_8cm_W57B_8_1_27.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating:  85%|████████▍ | 409/483 [00:06<00:01, 65.80it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[Warning] Prediction missing: m_2023_RGB_8cm_W57B_8_1_9.png\n"
      ]
     },
@@ -113,7 +256,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|██████████| 483/483 [00:01<00:00, 426.98it/s]"
+      "Evaluating: 100%|██████████| 483/483 [00:07<00:00, 66.18it/s]"
      ]
     },
     {
@@ -147,7 +290,7 @@
     "n_classes = len(CLASSES)\n",
     "\n",
     "# Directories for predicted and ground truth masks (as PNGs)\n",
-    "pred_dir = \"/shared/data/climateplus2025/YOLO+U-Net_Prediction_updated_0722/prediction_masks_tiles_320\"\n",
+    "pred_dir = \"/shared/data/climateplus2025/YOLO+U-Net_Prediction_3images_updated_head_to_head_comparision_0722/prediction_masks_tiles_320\"\n",
     "gt_dir   = \"/home/cmn60/cape_town_segmentation/masks_320_1k_new\"\n",
     "output_csv = \"metrics_evaluation_YOLO+U-Net.csv\"\n",
     "\n",
