--- a/2.Modeling/2.3.YOLO+U-Net/Evaluation/0.1.code.ipynb
+++ b/2.Modeling/2.3.YOLO+U-Net/Evaluation/0.1.code.ipynb
@@ -5,6 +5,11 @@
    "id": "d5254d56",
    "metadata": {},
    "source": [
+    "There are two evaluation methods: !!FOR POSTER WE USE Method2.!! <br>\n",
+    "\n",
+    "[1] **Method1. Direct Image Comparison** <br>\n",
+    "The predicted image is reconstructed to 12500×12500 size, then re-split into 320×320 tiles to compare directly with ground truth.\n",
+    "\n",
     "- This script reconstructs full-size segmentation masks (12500 * 12500) from U-Net predictions generated from 320×320 crops centered on YOLO-detected centroids. \n",
     "\n",
     "- Read YOLO detection results and tile metadata(csv), which are used to map each local centroid back to global image coordinates. For each centroid, the corresponding U-Net prediction (stored in a .json file) is loaded and correctly aligned within the full-size canvas, accounting for tile offsets and boundary clipping. \n",
@@ -304,6 +309,161 @@
     "            out_path = os.path.join(tile_output_dir, out_filename)\n",
     "\n",
     "            cv2.imwrite(out_path, tile)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53d1ba27",
+   "metadata": {},
+   "source": [
+    "[2] **Method2. JSON Reconstruction and Conflict Resolution** <br>\n",
+    "\n",
+    "- Designed to support post-processing for predictions from YOLO + U-Net models.\n",
+    "- Maps pixel coordinates from image-level JSON files back to the original 12500×12500 image space.\n",
+    "- Uses tile_metadata_for_reconstruction.csv to convert local (320×320 tile) coordinates to global positions.\n",
+    "- If multiple classes are predicted at the same pixel, the script:\n",
+    "    * Logs the conflict in conflicting_pixels.csv.\n",
+    "    * Resolves it based on class precision priority: Background -> Normal -> Pool -> Heater.\n",
+    "- To reduce file size, only saves predictions for: Normal, Heater, Pool (Background is not included)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03c82bd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import csv\n",
+    "from tqdm import tqdm\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "# ----------------------------\n",
+    "# CONFIGURATION\n",
+    "# ----------------------------\n",
+    "tile_meta_csv = \"/shared/data/climateplus2025/Prediction_entire_0801/tile_metadata_for_reconstruction.csv\"\n",
+    "json_input_dir = \"/shared/data/climateplus2025/Prediction_EntireDataset_YOLO+Unet/U-Net_prediction_output/prediction_outputs_v44\"\n",
+    "output_json_dir = \"/shared/data/climateplus2025/Prediction_entire_0801/Merged_prediction_Json/unified_json\"\n",
+    "original_image_shape = (12500, 12500)\n",
+    "\n",
+    "os.makedirs(output_json_dir, exist_ok=True)\n",
+    "\n",
+    "# ----------------------------\n",
+    "# CLASS PRIORITY (Precision-based)\n",
+    "# ----------------------------\n",
+    "# Higher index = higher priority\n",
+    "class_order = [\"background\", \"PV_normal\", \"PV_heater\", \"PV_pool\"]\n",
+    "# Reversed priority: PV_pool > PV_heater > PV_normal > background\n",
+    "class_priority = {\"background\": 0, \"PV_normal\": 1, \"PV_heater\": 2, \"PV_pool\": 3}\n",
+    "\n",
+    "# ----------------------------\n",
+    "# LOAD TILE METADATA\n",
+    "# ----------------------------\n",
+    "tile_meta_df = pd.read_csv(tile_meta_csv)\n",
+    "tile_meta_df.set_index(\"tile_name\", inplace=True)\n",
+    "\n",
+    "# ----------------------------\n",
+    "# OUTPUT STRUCTURES\n",
+    "# ----------------------------\n",
+    "unified_maps = {}\n",
+    "pixel_class_map = defaultdict(set)\n",
+    "\n",
+    "# ----------------------------\n",
+    "# STEP 1: PROCESS JSON FILES\n",
+    "# ----------------------------\n",
+    "print(\"Processing all prediction JSON files...\")\n",
+    "processed_files = 0\n",
+    "for fname in tqdm(os.listdir(json_input_dir)):\n",
+    "    if not fname.endswith(\".json\"):\n",
+    "        continue\n",
+    "\n",
+    "    pred_id = fname.replace(\".json\", \"\")  # i_2023_RGB_8cm_W24A_17_tile_0_2048_pred_0001\n",
+    "    tile_name_from_json = pred_id.replace(\"i_\", \"\").split(\"_pred_\")[0] + \".tif\"\n",
+    "\n",
+    "    if tile_name_from_json not in tile_meta_df.index:\n",
+    "        print(f\"[Warning] Metadata not found for: {tile_name_from_json}\")\n",
+    "        continue\n",
+    "\n",
+    "    tile_info = tile_meta_df.loc[tile_name_from_json]\n",
+    "    tile_x = int(tile_info[\"tile_x\"])\n",
+    "    tile_y = int(tile_info[\"tile_y\"])\n",
+    "\n",
+    "    base_image_name = tile_name_from_json.split(\"_tile_\")[0]\n",
+    "\n",
+    "    json_path = os.path.join(json_input_dir, fname)\n",
+    "    with open(json_path, \"r\") as f:\n",
+    "        data = json.load(f)\n",
+    "    pred_coords = data.get(\"predicted_coords\", {})\n",
+    "\n",
+    "    if base_image_name not in unified_maps:\n",
+    "        unified_maps[base_image_name] = np.full(original_image_shape, fill_value=0, dtype=np.uint8)\n",
+    "\n",
+    "    priority_map = unified_maps[base_image_name]\n",
+    "\n",
+    "    for cls_name, coords in pred_coords.items():\n",
+    "        cls_idx = class_priority[cls_name]\n",
+    "        for y_local, x_local in coords:\n",
+    "            global_y = tile_y + y_local\n",
+    "            global_x = tile_x + x_local\n",
+    "\n",
+    "            if 0 <= global_y < original_image_shape[0] and 0 <= global_x < original_image_shape[1]:\n",
+    "                key = (base_image_name, global_y, global_x)\n",
+    "                pixel_class_map[key].add(cls_name)\n",
+    "\n",
+    "                # Conflict resolution using precision-based priority\n",
+    "                existing_idx = priority_map[global_y, global_x]\n",
+    "                if cls_idx > existing_idx:\n",
+    "                    priority_map[global_y, global_x] = cls_idx\n",
+    "\n",
+    "    processed_files += 1\n",
+    "\n",
+    "print(f\"\\nProcessed {processed_files} prediction JSON files.\")\n",
+    "print(f\"Generated unified maps for {len(unified_maps)} base images.\")\n",
+    "\n",
+    "# ----------------------------\n",
+    "# STEP 2: SAVE CONFLICTING PIXELS\n",
+    "# ----------------------------\n",
+    "conflicts = {k: v for k, v in pixel_class_map.items() if len(v) > 1}\n",
+    "conflict_path = os.path.join(output_json_dir, \"conflicting_pixels.csv\")\n",
+    "\n",
+    "print(f\"\\nFound {len(conflicts)} conflicting pixels.\")\n",
+    "with open(conflict_path, \"w\", newline='') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow([\"base_image_name\", \"y\", \"x\", \"classes\"])\n",
+    "    for (img, y, x), cls_set in conflicts.items():\n",
+    "        writer.writerow([img, y, x, \",\".join(sorted(cls_set))])\n",
+    "\n",
+    "print(f\"Conflict list saved to: {conflict_path}\")\n",
+    "\n",
+    "# ----------------------------\n",
+    "# STEP 3: SAVE UNIFIED JSONS\n",
+    "# ----------------------------\n",
+    "print(\"\\nSaving unified JSON files (global coordinates)...\")\n",
+    "for base_image_name, class_map in unified_maps.items():\n",
+    "    # background 제외\n",
+    "    output_coords = {cls: [] for cls in class_order if cls != \"background\"}\n",
+    "\n",
+    "    for y in range(original_image_shape[0]):\n",
+    "        for x in range(original_image_shape[1]):\n",
+    "            class_idx = class_map[y, x]\n",
+    "            class_name = class_order[class_idx]\n",
+    "            if class_name == \"background\":\n",
+    "                continue\n",
+    "            output_coords[class_name].append([y, x])\n",
+    "\n",
+    "    out_json = {\"predicted_coords\": output_coords}\n",
+    "    out_path = os.path.join(output_json_dir, f\"{base_image_name}.json\")\n",
+    "\n",
+    "    with open(out_path, \"w\") as f:\n",
+    "        json.dump(out_json, f)\n",
+    "\n",
+    "    print(f\"Saved: {out_path}\")\n",
+    "\n",
+    "print(\"\\nAll done.\")\n"
    ]
   }
  ],
